@@ -240,10 +240,14 @@ public class UpgradeServlet extends JAMWikiServlet {
 	 */
 	private void upgradeStyleSheet(HttpServletRequest request, Vector messages) throws Exception {
 		WikiUser user = Utilities.currentUser(request);
+		Integer authorId = null;
+		if (user != null) {
+			authorId = new Integer(user.getUserId());
+		}
 		Collection virtualWikis = WikiBase.getHandler().getVirtualWikiList();
 		for (Iterator iterator = virtualWikis.iterator(); iterator.hasNext();) {
 			VirtualWiki virtualWiki = (VirtualWiki)iterator.next();
-			WikiBase.getHandler().updateSpecialPage(request.getLocale(), virtualWiki.getName(), WikiBase.SPECIAL_PAGE_STYLESHEET, user);
+			WikiBase.getHandler().updateSpecialPage(request.getLocale(), virtualWiki.getName(), WikiBase.SPECIAL_PAGE_STYLESHEET, authorId, request.getRemoteAddr());
 			messages.add("Updated stylesheet for virtual wiki " + virtualWiki.getName());
 		}
 	}
